--- a/scss/elements/_backgrounds.scss
+++ b/scss/elements/_backgrounds.scss
@@ -6,6 +6,7 @@
 @each $name, $theme in variables.$themes {
     $primary: map.get($theme, "primary");
     $secondary: map.get($theme, "secondary");
+    $complement: map.get($theme, "complement");
     $text: map.get($theme, "text-colour");
 
     .#{$name}.fill.primary {
@@ -15,6 +16,16 @@
 
     .#{$name}.fill.secondary {
         background-color: $secondary;
+        color: $text;
+    } 
+
+    .#{$name}.fill.complement {
+        background-color: $complement;
+        color: $text;
+    } 
+
+    .#{$name}.fill.complement.secondary {
+        background-color: complement($secondary);
         color: $text;
     } 
     
