--- a/scss/_shadow.scss
+++ b/scss/_shadow.scss
@@ -3,44 +3,50 @@
 @use 'variables';
 @use 'prototypes';
 
-@for $i from 1 through 5 {
-    .shadow-#{$i} {
-        box-shadow: gray 0px 0px ($i + 2px) 0px;
-    }
-    
-    .shadow-up-#{$i} {
-        box-shadow: gray 0px -#{$i}px ($i + 2px) 0px;
-    }
-    
-    .shadow-down-#{$i} {
-        box-shadow: gray 0px #{$i}px ($i + 2px) 0px;
-    }
-    
-    .shadow-right-#{$i} {
-        box-shadow: gray #{$i}px 0px ($i + 2px) 0px;
-    }
-    
-    .shadow-left-#{$i} {
-        box-shadow: gray -#{$i}px 0px ($i + 2px) 0px;
-    }
+@each $name, $theme in variables.$themes {
+    $primary: map.get($theme, "primary");
+    $secondary: map.get($theme, "secondary");
+    $text: map.get($theme, "text-colour");
 
-    .shadow-inset-#{$i} {
-        box-shadow: gray 0px 0px ($i + 2px) 0px inset;
-    }
+    @for $i from 1 through 5 {
+        .shadow-#{$i}.#{$name} {
+            box-shadow: $secondary 0px 0px ($i + 2px) 0px;
+        }
+        
+        .shadow-up-#{$i}.#{$name} {
+            box-shadow: $secondary 0px -#{$i}px ($i + 2px) 0px;
+        }
+        
+        .shadow-down-#{$i}.#{$name} {
+            box-shadow: $secondary 0px #{$i}px ($i + 2px) 0px;
+        }
+        
+        .shadow-right-#{$i}.#{$name} {
+            box-shadow: $secondary #{$i}px 0px ($i + 2px) 0px;
+        }
+        
+        .shadow-left-#{$i}.#{$name} {
+            box-shadow: $secondary -#{$i}px 0px ($i + 2px) 0px;
+        }
     
-    .shadow-inset-up-#{$i} {
-        box-shadow: gray 0px -#{$i}px ($i + 2px) 0px inset;
-    }
-    
-    .shadow-inset-down-#{$i} {
-        box-shadow: gray 0px #{$i}px ($i + 2px) 0px inset;
-    }
-    
-    .shadow-inset-right-#{$i} {
-        box-shadow: gray #{$i}px 0px ($i + 2px) 0px inset;
-    }
-    
-    .shadow-inset-left-#{$i} {
-        box-shadow: gray -#{$i}px 0px ($i + 2px) 0px inset;
+        .shadow-inset-#{$i}.#{$name} {
+            box-shadow: $secondary 0px 0px ($i + 2px) 0px inset;
+        }
+        
+        .shadow-inset-up-#{$i}.#{$name} {
+            box-shadow: $secondary 0px -#{$i}px ($i + 2px) 0px inset;
+        }
+        
+        .shadow-inset-down-#{$i}.#{$name} {
+            box-shadow: $secondary 0px #{$i}px ($i + 2px) 0px inset;
+        }
+        
+        .shadow-inset-right-#{$i}.#{$name} {
+            box-shadow: $secondary #{$i}px 0px ($i + 2px) 0px inset;
+        }
+        
+        .shadow-inset-left-#{$i}.#{$name} {
+            box-shadow: $secondary -#{$i}px 0px ($i + 2px) 0px inset;
+        }
     }
 }
